# zap

./: .gitignore  .ignore  Cargo.toml  README.md  flake.nix
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/bytecode/: Cargo.toml
crates/bytecode/src/: compiler.rs  lib.rs
crates/bytecode/src/snapshots/: bytecode__tests__fibonacci_series.snap
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  types.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/compiler/tests/: simple.rs  trivial  trivial.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/lexer/src/snapshots/: lexer__tests__lex_all_no_spaces.snap  lexer__tests__lex_all_no_spaces.snap.new  lexer__tests__lex_all_simple.snap  lexer__tests__lex_all_simple.snap.new  lexer__tests__lex_comment.snap  lexer__tests__lex_example.snap  lexer__tests__lex_test.snap  token__tests__lex_all_simple.snap  token__tests__lex_example.snap
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/parse/: Cargo.toml
crates/parse/src/: ast.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  lib.rs
crates/parser/src/ast/: token.rs
crates/parser/src/snapshots/: parser__tests__parse_test-2.snap  parser__tests__parse_test.snap
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
crates/token/src/snapshots/: token__tests__in->"vali"@->:d synt(ax} {but) t;h:e l=e:=xer should handle it.snap  token__tests__lex_str_lit-2.snap  token__tests__lex_str_lit-3.snap  token__tests__lex_str_lit-4.snap  token__tests__lex_str_lit-5.snap  token__tests__lex_str_lit.snap  token__tests__lex_test-2.snap  token__tests__lex_test-3.snap  token__tests__lex_test-4.snap  token__tests__lex_test-5.snap  token__tests__lex_test-6.snap  token__tests__lex_test-7.snap  token__tests__lex_test-8.snap  token__tests__lex_test-9.snap  token__tests__lex_test.snap
crates/typeck/: Cargo.toml
crates/typeck/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs
tests/: trivial
