[package]
name = "codegen"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecode.path = "../bytecode"
parser.path = "../parser"

inkwell = { version = "0.3", features = ["llvm17-0"] }
