[package]
name = "macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# these are build time dependencies, because this is a proc-macro
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
