[package]
name = "parser"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer.path = "../lexer"
macros.path = "../macros"

# only for unit tests
[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
insta = { version = "1.34", features = ["yaml"] }
